--- a/tutorials/01_alpine_table/package.json
+++ b/tutorials/01_alpine_table/package.json
@@ -21,9 +21,9 @@
     "vite": "^3.2.3",
     "vite-plugin-lxr": "^0.0.8"
   },
-  "name": "01_alpinejs_table",
+  "name": "01_alpine_table",
   "author": "LeanIX GmbH",
-  "description": "Tutorial on how to query the inventory and show results as a table using AlpineJS",
+  "description": "Tutorial on how to query the inventory and show results as a table using Alpine",
   "leanixReport": {
     "id": "net.leanix.report.tutorial.01",
     "title": "Tutorial 01",
